@@ -12,32 +12,32 @@ from PyQt4 import QtCore, QtGui
 class Ui_Dialog(object):
     def setupUi(self, Dialog):
         Dialog.setObjectName("Dialog")
-        Dialog.resize(441, 496)
+        Dialog.resize(450, 325)
         icon = QtGui.QIcon()
         icon.addPixmap(QtGui.QPixmap(":/icons/wad.png"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
         Dialog.setWindowIcon(icon)
         self.QwadIcon = QtGui.QLabel(Dialog)
-        self.QwadIcon.setGeometry(QtCore.QRect(150, 0, 131, 131))
+        self.QwadIcon.setGeometry(QtCore.QRect(160, 0, 131, 131))
         self.QwadIcon.setPixmap(QtGui.QPixmap(":/icons/wad.png"))
-        self.QwadIcon.setScaledContents(False)
+        #self.QwadIcon.setScaledContents(False)
         self.QwadIcon.setObjectName("QwadIcon")
         self.Qwad_name = QtGui.QLabel(Dialog)
-        self.Qwad_name.setGeometry(QtCore.QRect(170, 110, 91, 51))
+        self.Qwad_name.setGeometry(QtCore.QRect(70, 70, 91, 51))
         self.Qwad_name.setObjectName("Qwad_name")
         self.Version = QtGui.QLabel(Dialog)
-        self.Version.setGeometry(QtCore.QRect(180, 150, 51, 21))
+        self.Version.setGeometry(QtCore.QRect(70, 110, 51, 20))
         self.Version.setObjectName("Version")
         self.byAuthor = QtGui.QLabel(Dialog)
-        self.byAuthor.setGeometry(QtCore.QRect(70, 170, 51, 20))
+        self.byAuthor.setGeometry(QtCore.QRect(70, 125, 51, 20))
         self.byAuthor.setObjectName("byAuthor")
         self.versionNumber = QtGui.QLabel(Dialog)
-        self.versionNumber.setGeometry(QtCore.QRect(230, 150, 131, 21))
+        self.versionNumber.setGeometry(QtCore.QRect(120, 110, 131, 20))
         self.versionNumber.setObjectName("versionNumber")
         self.AuthorName = QtGui.QLabel(Dialog)
-        self.AuthorName.setGeometry(QtCore.QRect(120, 170, 311, 20))
+        self.AuthorName.setGeometry(QtCore.QRect(120, 125, 311, 20))
         self.AuthorName.setObjectName("AuthorName")
         self.abuttabs = QtGui.QTabWidget(Dialog)
-        self.abuttabs.setGeometry(QtCore.QRect(10, 200, 421, 281))
+        self.abuttabs.setGeometry(QtCore.QRect(10, 150, 421, 150))
         self.abuttabs.setObjectName("abuttabs")
         self.licensetab = QtGui.QWidget()
         self.licensetab.setObjectName("licensetab")
@@ -73,7 +73,7 @@ class Ui_Dialog(object):
         self.byAuthor.setText(QtGui.QApplication.translate("Dialog", "Author: ", None, QtGui.QApplication.UnicodeUTF8))
         self.textEdit.setText(QtGui.QApplication.translate("Dialog", "GNU General Public License v3", None, QtGui.QApplication.UnicodeUTF8))
         self.abuttabs.setTabText(self.abuttabs.indexOf(self.licensetab), QtGui.QApplication.translate("Dialog", "License", None, QtGui.QApplication.UnicodeUTF8))
-        self.label.setText(QtGui.QApplication.translate("Dialog", "Thanks to Wii.py team: Xuzz, SquidMan, megazig, TheLemonMan, |Omega, and Matt_P. Qwad is only a frontend for their unbelievably awesome framework.", None, QtGui.QApplication.UnicodeUTF8))
+        self.label.setText(QtGui.QApplication.translate("Dialog", "Thanks to Wii.py team: Xuzz, SquidMan, megazig, TheLemonMan, |Omega, and Matt_P.", None, QtGui.QApplication.UnicodeUTF8))
         self.abuttabs.setTabText(self.abuttabs.indexOf(self.thankstab), QtGui.QApplication.translate("Dialog", "Thanks", None, QtGui.QApplication.UnicodeUTF8))
 
 import Qwad_rc
